RESOLVED FIXED304726
REGRESSION (Safari 26.2): Scrollbar drag fails on first attempt after dynamic DOM replacement in overflow container
https://bugs.webkit.org/show_bug.cgi?id=304726
Summary REGRESSION (Safari 26.2): Scrollbar drag fails on first attempt after dynamic...
kchs29
Reported 2025-12-27 05:16:07 PST
Created attachment 477858 [details] Minimal test case to reproduce the bug ## Problem Scrollbar drag completely fails on first attempt after dynamic DOM replacement inside an overflow container. The thumb does not move at all. Second attempt works normally. Mouse wheel scrolling always works. Both vertical and horizontal scrollbars are affected. ## Steps to Reproduce 1. Create a container with overflow: scroll (or overflow-x/overflow-y) 2. Replace inner DOM content via JavaScript (e.g., innerHTML) 3. Immediately try to drag the scrollbar thumb ## Expected Scrollbar drag works on first attempt. ## Actual First drag fails (thumb doesn't move at all). Second drag works. ## Regression - Safari 26.1 (21622.2.11.11.9): Works correctly ✅ - Safari 26.2 (21623.1.14.11.9): Bug occurs ❌ ## Test Case See attached: webkit-bug-testcase.html
Attachments
Minimal test case to reproduce the bug (5.37 KB, text/html)
2025-12-27 05:16 PST, kchs29
no flags
Radar WebKit Bug Importer
Comment 1 2025-12-27 21:02:35 PST
Simon Fraser (smfr)
Comment 2 2026-01-07 18:46:43 PST
I can reproduce even on first load of the attachment.
Simon Fraser (smfr)
Comment 3 2026-01-07 21:40:28 PST
EWS
Comment 4 2026-01-09 15:08:49 PST
Committed 305383@main (bc68ba9c807c): <https://commits.webkit.org/305383@main> Reviewed commits have been landed. Closing PR #56239 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.